@@ -1,0 +1,2 @@
+-- Remove manner_of_death column from fatal_police_shootings table
+ALTER TABLE fatal_police_shootings DROP COLUMN manner_of_death;
