@@ -1,0 +1,2 @@
+-- Drop foreign key constraint for race_ethnicity_id
+ALTER TABLE fatal_police_shootings DROP FOREIGN KEY fatal_police_shootings_ibfk_3;
